--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/QZZP/QZZP_QZZP.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/QZZP/QZZP_QZZP.css
@@ -48,7 +48,7 @@
     border: none !important;
 }
 
-.img_SHRQ {
+.img_ZWFL {
     width: 16px;
     height: 16px;
     cursor: pointer;
@@ -158,7 +158,7 @@
     font-family: "宋体", "SimSun";
 }
 
-.liSHRQ {
+.liZWFL {
     display: inline-block;
     width: 105px;
     height: 30px;
