--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/QZZP/QZZP_QZZP.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/QZZP/QZZP_QZZP.css
@@ -538,3 +538,71 @@
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
 }
+
+.div_xzk {
+    margin-top: -7px;
+    margin-left: -1px;
+    width: 860px;
+    height: 550px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    box-shadow: 0px 0px 8px #888;
+    border-radius: 4px;
+}
+
+.table_xzk {
+    height: 100%;
+    width: 100%;
+}
+
+.span_xzk_body_left {
+    float: left;
+}
+
+.div_content_yxmc {
+    width: 480px;
+    height: 260px;
+    display: inline-block;
+    float: left;
+    padding: 0px 20px;
+}
+
+.div_content_yxbq {
+    width: 136px;
+    height: 260px;
+    display: inline-block;
+    float: right;
+}
+
+.divstep_yx {
+    width: 30px;
+    text-align: center;
+    height: 28px;
+    float: left;
+    cursor: pointer;
+    background-color: #cccccc;
+    margin-top: 2px;
+    margin-right: 2px;
+}
+
+    .divstep_yx:hover {
+        background-color: #31b0d5;
+        color: #fff;
+    }
+
+.span_yxmc {
+    display: block;
+    float: left;
+    height: 35px;
+    line-height: 30px;
+    width: 110px;
+    color: #333;
+    font-size: 14px;
+    text-align: center;
+    cursor: pointer;
+}
+
+    .span_yxmc:hover {
+        color: #ff6100;
+        font-weight: 700;
+    }
