--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP_QZZP/QZZP_QZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP_QZZP/QZZP_QZZP.cshtml
@@ -89,7 +89,7 @@
                     <span id="spanPPMC">职位名称</span>
                 </div>
                 <div class="divRight">
-                    <input id="ZWMC" maxlength="50" column="ZWMC" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px;" type="text" placeholder="请输入职位名称" />
+                    <input id="BT" maxlength="50" column="BT" class="spanFWLX SRK" style="width: 300px; padding: 6px 12px;" type="text" placeholder="请输入职位名称" />
                     <div id="divZWMCTip"></div>
                 </div>
             </div>
@@ -100,15 +100,12 @@
                 </div>
                 <div class="divRight">
                     <div id="divZWLBText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div id="divPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divZWLBSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <input type="hidden" id="ZWLBID" />
                             <span id="spanZWLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择职位类别</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divZWLB" class="div_xzk">
-                            <table class="table_xzk">
-                                
-                            </table>
+                        <div id="divZWLB" class="div_xzk" style="display: none">
                         </div>
                     </div>
                 </div>
