--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/QZZP/QZZP_QZZP.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/QZZP/QZZP_QZZP.css
@@ -176,7 +176,7 @@
     cursor: pointer;
 }
 
-.liWTMYETXL{
+.liWTMYETXL {
     display: inline-block;
     width: 105px;
     height: 30px;
@@ -543,66 +543,87 @@
     margin-top: -7px;
     margin-left: -1px;
     width: 860px;
-    height: 550px;
+    height: 770px;
     border: 1px solid #ccc;
     background-color: #fff;
     box-shadow: 0px 0px 8px #888;
     border-radius: 4px;
+    padding: 6px 10px;
 }
 
-.table_xzk {
-    height: 100%;
+.div_zwlb_first {
     width: 100%;
-}
-
-.span_xzk_body_left {
-    float: left;
-}
-
-.div_content_yxmc {
-    width: 480px;
-    height: 260px;
-    display: inline-block;
-    float: left;
-    padding: 0px 20px;
-}
-
-.div_content_yxbq {
-    width: 136px;
-    height: 260px;
-    display: inline-block;
-    float: right;
-}
-
-.divstep_yx {
-    width: 30px;
-    text-align: center;
-    height: 28px;
-    float: left;
-    cursor: pointer;
-    background-color: #cccccc;
-    margin-top: 2px;
-    margin-right: 2px;
-}
-
-    .divstep_yx:hover {
-        background-color: #31b0d5;
-        color: #fff;
-    }
-
-.span_yxmc {
-    display: block;
-    float: left;
-    height: 35px;
     line-height: 30px;
-    width: 110px;
-    color: #333;
-    font-size: 14px;
-    text-align: center;
+    display: block;
+    font-size: 13px;
+    color: #333333;
+    font-weight: 700;
+    padding: 6px 10px;
+}
+
+.div_zwlb_second {
+    width: 100%;
+    height: 30px;
+    display: block;
+    padding-left: 10px;
+}
+
+.div_zwlb_second_inner {
+    display: inline-block;
+    float: left;
+    height: 30px;
+    width: 180px;
+    font-size: 13px;
+    color: #333333;
+    padding: 6px 10px;
     cursor: pointer;
 }
 
-    .span_yxmc:hover {
-        color: #ff6100;
-        font-weight: 700;
+    .div_zwlb_second_inner:hover {
+        color: #fd634f;
     }
+
+
+.img_zwlb_second_inner {
+    background-image: url(../images/arrow_down.png);
+    width: 12px;
+    height: 18px;
+    display: inline-block;
+}
+
+.em_zwlb_split {
+    width: 800px;
+    height: 1px;
+    float: left;
+    background: #cccccc;
+    margin-top: 5px;
+}
+
+.span_zwlb_third {
+    width: 130px;
+    height: 30px;
+    display: inline-block;
+    text-align: left;
+    color: #333333;
+    font-size: 13px;
+    padding: 6px 10px;
+    cursor: pointer;
+}
+
+.span_zwlb_third:hover {
+    color: #fd634f;
+}
+
+.div_zwlb_third {
+    margin-top: -1px;
+    margin-left: -1px;
+    width: 425px;
+    height: 300px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    box-shadow: 0px 0px 8px #888;
+    border-radius: 4px;
+    display: none;
+    z-index: 1001;
+    position: relative;
+}
