--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP_JZZP/QZZP_JZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP_JZZP/QZZP_JZZP.cshtml
@@ -93,19 +93,19 @@
                     <div id="divZWMCTip"></div>
                 </div>
             </div>
-            <div id="divZPZWLB" class="divFWCZ" style="margin-top: 22px; z-index: 999;">
+            <div id="divZPJZLB" class="divFWCZ" style="margin-top: 22px; z-index: 999;">
                 <div class="divLeft">
                     <span class="required">*</span>
                     <span class="spanFWCZ">兼职类别</span>
                 </div>
                 <div class="divRight">
-                    <div id="divZWLBText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div id="divZWLBSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="ZWLBID" />
-                            <span id="spanZWLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择职位类别</span>
+                    <div id="divJZLBText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div id="divJZLBSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <input type="hidden" id="JZLBID" />
+                            <span id="spanJZLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择兼职类别</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divZWLB" class="div_xzk" style="display: none">
+                        <div id="divJZLB" class="div_xzk" style="display: none">
                         </div>
                     </div>
                 </div>
@@ -123,64 +123,51 @@
                     <div id="divZPRSTip"></div>
                 </div>
             </div>
-            <div id="divZPMYXZ" class="divFWCZ" style="z-index: 997;">
+            <div id="divJZYXQ" class="divFWCZ">
                 <div class="divLeft">
                     <span class="required">*</span>
-                    <span class="spanFWCZ">每月薪资</span>
+                    <span class="spanFWCZ">兼职有效期</span>
                 </div>
                 <div class="divRight">
-                    <div id="divMYXZText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div id="divMYXZSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanMYXZ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择每月薪资</span>
+                    <img class="iFWCZ" id="imgDQZP" /><label class="labelFWCZ">&nbsp;&nbsp;短期招聘&nbsp;&nbsp;</label>
+                    <img class="iFWCZ" id="imgCQZP" /><label class="labelFWCZ">&nbsp;&nbsp;长期招聘</label>
+                </div>
+            </div>
+            <div id="divZPXZSP" class="divFWCZ" style="z-index: 997;">
+                <div class="divLeft">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">薪资水平</span>
+                </div>
+                <div class="divRight">
+                    <input id="XZSP" maxlength="9" column="XZSP" class="spanFWLX SRK" style="width: 150px; padding: 6px 12px;" type="text" placeholder="请输入薪资水平" />
+                    <div id="divXZSPDWText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div id="divXZSPDWSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanXZSPDW" class="spanFWQK spanFontColor" style="margin-top: 0">请选择</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divMYXZ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divXZSPDW" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="divZWFL" class="divFWCZ" style="z-index: 994;">
-                <div class="divLeft">
-                    <span class="required">&nbsp;</span>
-                    <span id="spanZWFL">职位福利</span>
-                </div>
-                <div id="divZWFLText" class="divRight" style="position: relative;">
-                </div>
-            </div>
-            <div id="divZPXLYQ" class="divFWCZ" style="z-index: 996;">
+            <div id="divZPXZJS" class="divFWCZ" style="z-index: 997;">
                 <div class="divLeft">
                     <span class="required">*</span>
-                    <span class="spanFWCZ">学历要求</span>
+                    <span class="spanFWCZ">薪资水平</span>
                 </div>
                 <div class="divRight">
-                    <div id="divXLYQText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div id="divXLYQSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanXLYQ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择学历要求</span>
+                    <div id="divXZJSText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div id="divXZJSSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanXZJS" class="spanFWQK spanFontColor" style="margin-top: 0">请选择</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divXLYQ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="divZPGZNX" class="divFWCZ" style="z-index: 995;">
-                <div class="divLeft">
-                    <span class="required">*</span>
-                    <span class="spanFWCZ">工作年限</span>
-                </div>
-                <div class="divRight">
-                    <div id="divGZNXText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div id="divGZNXSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanGZNX" class="spanFWQK spanFontColor" style="margin-top: 0">请选择工作年限</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divGZNX" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divXZJS" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
             </div>
             <div id="divXXXX" class="divSplit" style="display: block; text-align: left;">
-                <span class="spanSplit">职位描述</span>
+                <span class="spanSplit">兼职内容</span>
                 <em class="emSplit"></em>
             </div>
             <div id="divFYMS" class="divFWCZ" style="height: 253px; position: relative; z-index: 994;">
