--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/QZZP/QZZP_JZZP.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/QZZP/QZZP_JZZP.css
@@ -538,3 +538,30 @@
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
 }
+
+.div_xzk {
+    margin-top: -7px;
+    margin-left: -1px;
+    width: 640px;
+    height: 320px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    box-shadow: 0px 0px 8px #888;
+    border-radius: 4px;
+    padding: 6px 10px;
+}
+
+.span_jzlb {
+    width: 150px;
+    height: 30px;
+    display: inline-block;
+    text-align: left;
+    color: #333333;
+    font-size: 13px;
+    padding: 6px 10px;
+    cursor: pointer;
+}
+
+.span_jzlb:hover {
+    color: #fd634f;
+}
