--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
@@ -94,7 +94,7 @@
                 </div>
                 <div id="divCJHTip" class="Warn" style="z-index: 990; position: relative;"></div>
             </div>
-            <div id="divKCPP" class="divFWCZ" style="z-index: 999">
+            <div id="divJCPP" class="divFWCZ" style="z-index: 999">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">品牌</span>
