--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/QZZP/QZZP_JZZP.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/QZZP/QZZP_JZZP.css
@@ -296,199 +296,6 @@
     cursor: move;
 }
 
-.toolbar_wrap {
-    width: 130px;
-    height: 100px;
-    cursor: move;
-    display: none;
-    position: absolute;
-    top: 20px;
-    left: 0;
-}
-
-    .toolbar_wrap:hover {
-        display: block;
-        width: 130px;
-        height: 100px;
-        cursor: move;
-    }
-
-.opacity {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 20px;
-    background-color: #000;
-    opacity: 0.3;
-    z-index: 900;
-}
-
-.toolbar {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 20px;
-    z-index: 901;
-    cursor: default;
-}
-
-.edit {
-    background-image: url(../images/edit.png);
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    text-decoration: none;
-    right: 22px;
-    top: 0;
-    cursor: pointer;
-}
-
-    .edit:active {
-        background-image: url(../images/edit_select.png);
-    }
-
-
-.delete {
-    background-image: url(../images/delete.png);
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    text-decoration: none;
-    right: 0;
-    top: 0;
-    cursor: pointer;
-}
-
-    .delete:active {
-        background-image: url(../images/delete_select.png);
-    }
-
-#editImgWindow {
-    display: none;
-    border-radius: 4px;
-    width: 936px;
-    height: 562px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    z-index: 1000;
-    background: #fff;
-    margin-top: -290px;
-    margin-left: -467px;
-}
-
-#editDZWindow {
-    display: none;
-    border-radius: 4px;
-    width: 936px;
-    height: 562px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    z-index: 1000;
-    background: #fff;
-    margin-top: -290px;
-    margin-left: -467px;
-}
-
-#editImgHead {
-    width: 100%;
-    height: 65px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    font-size: 14px;
-    cursor: default;
-}
-
-    #editImgHead span {
-        font-size: 16px;
-        font-weight: 700;
-        position: absolute;
-        top: 20px;
-        left: 25px;
-    }
-
-    #editImgHead div {
-        height: 17px;
-        width: 17px;
-        position: absolute;
-        right: 25px;
-        top: 25px;
-        background-image: url(../images/close.png);
-        cursor: pointer;
-    }
-
-#canvasFrame {
-    z-index: 1001;
-    position: absolute;
-    left: 75.5px;
-    top: 56px;
-    width: 785px;
-    height: 435px;
-    background-color: #E1E1E1;
-}
-
-#canvas {
-    left: 0px;
-    top: 0px;
-    position: absolute;
-}
-
-#toolBar {
-    position: absolute;
-    left: 76px;
-    top: 495px;
-    width: 785px;
-    height: 60px;
-}
-
-#editToolBar {
-    position: absolute;
-    left: 50%;
-    margin-left: -90px;
-}
-
-.editToolButton {
-    height: 60px;
-    width: 60px;
-    display: inline-block;
-    cursor: pointer;
-    position: relative;
-    color: gray;
-}
-
-    .editToolButton span {
-        display: inline-block;
-        position: absolute;
-        bottom: 3px;
-        left: 15px;
-    }
-
-.editButtonIcon {
-    height: 27px;
-    width: 27px;
-    position: absolute;
-    left: 17px;
-    top: 5px;
-}
-
-.div_shadow {
-    display: none;
-    background-color: #000;
-    opacity: 0.5;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    width: 100%;
-    height: 100%;
-}
-
 .span_xzdz {
     color: #31b0d5;
     cursor: pointer;
@@ -564,4 +371,103 @@
 
 .span_jzlb:hover {
     color: #fd634f;
+}
+
+
+.div_gzcs_xzk {
+    margin-top: -7px;
+    margin-left: -1px;
+    width: 620px;
+    height: 344px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+}
+
+.div_xzk_head {
+    width: 100%;
+    height: 40px;
+    margin-top: 20px;
+    margin-left: 20px;
+    display: block;
+}
+
+    .div_xzk_head input {
+        float: left;
+        margin-right: 10px;
+    }
+
+.div_xzk_body {
+    height: 260px;
+    width: 100%;
+}
+
+.div_xzk_body_left {
+    height: 100%;
+    width: 255px;
+}
+
+.span_xzk_body_left {
+    float: left;
+}
+
+.div_content_yxmc {
+    width: 480px;
+    height: 260px;
+    display: inline-block;
+    float: left;
+    padding: 0px 20px;
+}
+
+.div_content_yxbq {
+    width: 136px;
+    height: 260px;
+    display: inline-block;
+    float: right;
+}
+
+.divstep_yx {
+    width: 30px;
+    text-align: center;
+    height: 28px;
+    float: left;
+    cursor: pointer;
+    background-color: #cccccc;
+    margin-top: 2px;
+    margin-right: 2px;
+}
+
+    .divstep_yx:hover {
+        background-color: #31b0d5;
+        color: #fff;
+    }
+
+.span_yxmc {
+    display: block;
+    float: left;
+    height: 35px;
+    line-height: 30px;
+    width: 110px;
+    color: #333;
+    font-size: 14px;
+    text-align: center;
+    cursor: pointer;
+}
+
+    .span_yxmc:hover {
+        color: #ff6100;
+        font-weight: 700;
+    }
+
+.input_content {
+    width: 451px;
+    cursor: default;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    height: 34px;
+    padding: 4px 12px;
+    display: inline-block;
+}
+
+:-ms-input-placeholder.input_content {
+    color: #999;
 }
