--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP_JZZP/QZZP_JZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP_JZZP/QZZP_JZZP.cshtml
@@ -187,7 +187,7 @@
             <div id="divFYMS" class="divFWCZ" style="height: 253px; position: relative; z-index: 994;">
                 <div class="divLeft" style="height: 170px; vertical-align: top;">
                     <span class="required" style="vertical-align: top">*</span>
-                    <span id="spanFYMS" style="vertical-align: top">职位描述</span>
+                    <span id="spanFYMS" style="vertical-align: top">兼职内容</span>
                 </div>
                 <div class="divRight">
                     <script id="FYMS" type="text/plain" style="width:594px;height:200px;display:inline-block;">
@@ -195,40 +195,7 @@
                     <div id="divFYMSTip" class="Warn"></div>
                 </div>
             </div>
-            <div id="divFWZP" class="divFWCZ">
-                <div class="divLeft" style="height: 170px; vertical-align: top;">
-                    <span class="required" style="vertical-align: top">*</span>
-                    <span id="spanFWZP" style="vertical-align: top">上传照片</span>
-                </div>
-                <div class="divRight">
-                    <div id="divUploadOut" class="divUploadOut">
-                        <form action="" enctype="multipart/form-data" id="myform" method="post">
-                            <input id="inputUpload" unselectable="on" type="file" multiple="multiple" class="file" />
-                        </form>
-                    </div>
-                    <div style="margin-left: 214px; font-size: 14px; color: #999999;">
-                        <span>最多8张，可多选上传，最大10mb。有图可使浏览量增加3倍，并会在推荐位显示。</span>
-                    </div>
-                    <div id="divFWZPTip" style="margin-top: 10px; margin-left: 210px;"></div>
-                </div>
-            </div>
-            <div id="divFWZPValue" class="divFWCZ" style="display: none; text-align: left; margin-top: 140px;">
-                <div class="divLeft" style="height: 170px; vertical-align: top;">
-                    <span class="required"></span>
-                    <span id="spanFWZP" style="width: 56px; display: inline-block;"></span>
-                </div>
-                <div id="divImgs1" class="divRight" style="display: inline-block; width: 670px;">
-                    <ul id="ulImgs1" class="ulImgs" style="padding-left: 0px;"></ul>
-                </div>
-                <div class="divLeft" style="height: 170px; vertical-align: top;">
-                    <span class="required"></span>
-                    <span id="spanFWZP" style="width: 56px; display: inline-block;"></span>
-                </div>
-                <div id="divImgs2" class="divRight" style="display: inline-block; width: 670px;">
-                    <ul id="ulImgs2" class="ulImgs" style="padding-left: 0px;"></ul>
-                </div>
-            </div>
-            <div id="divLXRXX" class="divSplit" style="display: block; text-align: left; margin-top: 140px;">
+            <div id="divLXRXX" class="divSplit" style="display: block; text-align: left; ">
                 <span class="spanSplit">联系人信息</span>
                 <em class="emSplit"></em>
             </div>
@@ -248,8 +215,68 @@
                     <span id="spanLXDH">联系电话</span>
                 </div>
                 <div class="divRight">
-                    <input id="LXDH" maxlength="11" column="LXDH" class="spanFWLX inputLXRXX SRK" type="text" placeholder="请输入联系电话" />
+                    <input id="LXDH" maxlength="11" column="LXDH" class="spanFWLX inputLXRXX SRK" type="text" placeholder="请输入联系电话"/>
                     <div id="divLXDHTip"></div>
+                </div>
+            </div>
+            <div id="divJLJSYX" class="divFWCZ" style="margin-top: -12px;" style="z-index: 988">
+                <div class="divLeft" style="margin-left: 71px;">
+                    <span class="required"></span>
+                    <span id="spanJLJSYX">简历接收邮箱</span>
+                </div>
+                <div class="divRight">
+                    <input id="JLJSYX" column="JLJSYX" class="spanFWLX inputLXRXX SRK" type="text" placeholder="请输入邮箱"/>
+                </div>
+            </div>
+            <div id="divZPGZCS" class="divFWCZ" style="z-index: 991;">
+                <div class="divLeft" style="margin-left: 102px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ">工作城市</span>
+                </div>
+                <div class="divRight">
+                    <div id="divGZCSText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divGZCSSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanGZCS" class="spanFWQK spanFontColor" style="margin-top: 0">请选择工作城市</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divGZCS" class="div_gzcs_xzk" style="display: none;">
+                            <div class="div_xzk_head">
+                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text" />
+                                <input class="btn btn-info" type="button" value="快速搜索" />
+                            </div>
+                            <div class="div_xzk_body">
+                                <div class="div_content_yxmc" id="div_content_yxmc">
+                                </div>
+                                <div class="div_content_yxbq" id="div_content_yxbq">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divZPDD" class="divFWCZ" style="z-index: 991;">
+                <div class="divLeft" style="margin-left: 102px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ">工作区域</span>
+                </div>
+                <div class="divRight">
+                    <div id="divQYText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divQYSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <input type="hidden" id="QYCode" />
+                            <span id="spanQY" class="spanFWQK spanFontColor" style="margin-top: 0">请选择区域</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divQY" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divDDText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divDDSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanDD" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divDD" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="divQQ" class="divFWCZ" style="margin-top: -12px;" style="z-index: 988">
@@ -265,33 +292,6 @@
                 <input type="button" class="btn btn-info input_text" style="height: 50px; font-size: 24px;" id="btnFB" value="发布" />
             </div>
         </div>
-    </div>
-    <div class="div_shadow" id="shadow"></div>
-    <div id="editImgWindow">
-        <div id="editImgHead">
-            <span>编辑图片</span>
-            <div id="btnClose"></div>
-        </div>
-        <div id="canvasFrame">
-            <canvas id="canvas" width="1570" height="870" style="width:785px;height:435px;"></canvas>
-        </div>
-        <div id="toolBar">
-            <div id="editToolBar">
-                <div class="editToolButton" id="rotate">
-                    <div class="editButtonIcon" style="background-image:url(@Url.Content("~/Areas/Business/Css/images/rotate.png"))"></div>
-                    <span>旋转</span>
-                </div>
-                <div class="editToolButton" id="clip">
-                    <div class="editButtonIcon" style="background-image:url(@Url.Content("~/Areas/Business/Css/images/clip.png"))"></div>
-                    <span>裁剪</span>
-                </div>
-                <div class="editToolButton" id="mosaic">
-                    <div class="editButtonIcon" style="background-image:url(@Url.Content("~/Areas/Business/Css/images/mosaic.png"))"></div>
-                    <span>模糊</span>
-                </div>
-            </div>
-        </div>
-        <input type="button" id="btnSavePhoto" class="btn btn-info" style="height: 34px; width:69px; position:absolute;bottom:14px;right:77px;" value="保&nbsp;&nbsp;存" />
     </div>
 </body>
 </html>
