--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/QZZP/QZZP_JZZP.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/QZZP/QZZP_JZZP.css
@@ -471,3 +471,36 @@
 :-ms-input-placeholder.input_content {
     color: #999;
 }
+
+.table_jzsj {
+    width: 490px;
+    height: 170px;
+    display: inline-block;
+    color: gray;
+    font-weight: normal;
+}
+
+.table_jzsj th {
+    background-color: #f4f4f4;
+    border: 1px solid #d9d9d9;
+    text-align: center;
+    width: 62px;
+    height: 44px;
+}
+
+.table_jzsj td {
+    border: 1px solid #d9d9d9 !important;
+    text-align: center;    
+    width: 62px;
+    height: 44px;
+    cursor: pointer;
+}
+
+.table_jzsj td:hover {
+    background-color: rgba(91, 192, 222,0.2);
+}
+
+.img_jzsj {
+    width: 16px;
+    height: 16px;
+}
