--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP_JZZP/QZZP_JZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP_JZZP/QZZP_JZZP.cshtml
@@ -136,9 +136,9 @@
                     <table class="table_jzsj">
                         <thead><tr><th>&nbsp;</th><th>星期一</th><th>星期二</th><th>星期三</th><th>星期四</th><th>星期五</th><th>星期六</th><th>星期天</th></tr></thead>
                         <tbody>
-                            <tr><th>上午</th><td><img class="img_jzsj"/></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td></tr>
-                            <tr><th>下午</th><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td></tr>
-                            <tr><th>晚上</th><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td><td><img class="img_jzsj" /></td></tr>
+                            <tr><th>上午</th><td><img id="img1_1" class="img_jzsj" /></td><td><img id="img1_2" class="img_jzsj" /></td><td><img id="img1_3" class="img_jzsj" /></td><td><img id="img1_4" class="img_jzsj" /></td><td><img id="img1_5" class="img_jzsj" /></td><td><img id="img1_6" class="img_jzsj" /></td><td><img id="img1_7" class="img_jzsj" /></td></tr>
+                            <tr><th>下午</th><td><img id="img2_1" class="img_jzsj" /></td><td><img id="img2_2" class="img_jzsj" /></td><td><img id="img2_3" class="img_jzsj" /></td><td><img id="img2_4" class="img_jzsj" /></td><td><img id="img2_5" class="img_jzsj" /></td><td><img id="img2_6" class="img_jzsj" /></td><td><img id="img2_7" class="img_jzsj" /></td></tr>
+                            <tr><th>晚上</th><td><img id="img3_1" class="img_jzsj" /></td><td><img id="img3_2" class="img_jzsj" /></td><td><img id="img3_3" class="img_jzsj" /></td><td><img id="img3_4" class="img_jzsj" /></td><td><img id="img3_5" class="img_jzsj" /></td><td><img id="img3_6" class="img_jzsj" /></td><td><img id="img3_7" class="img_jzsj" /></td></tr>
                         </tbody>
                     </table>
                     <div id="divJZSJTip"></div>
